# advent-of-code

./: .gitignore  Computer.hs  Freer.hs  Makefile  advent-of-code.cabal  flake.nix  fourmolu.yaml  package.yaml
2019/day/1/: part1.hs  part2.hs
2019/day/2/: part1.hs  part2.hs
2019/day/3/: part1.hs  part2.hs
2019/day/4/: part1.hs  part2.hs
2019/day/5/: part1.hs  part2.hs
2019/day/6/: part1.hs  part2.hs
2019/day/7/: part1.hs  part2.hs
2019/day/8/: part1.hs  part2.hs
2020/day/01/: Makefile  Solve.hs  Solve.rs
2020/day/02/: Makefile  Solve.hs
2020/day/03/: Makefile  Solve.hs
2020/day/04/: Makefile  Solve.hs
2020/day/05/: Cargo.toml  Makefile  solve-aoc.cabal
2020/day/06/: Makefile  solve-aoc.cabal
2020/day/07/: Makefile  solve-aoc.cabal
2020/day/08/: Makefile  solve-aoc.cabal
2020/day/09/: solve-aoc.cabal
2020/day/10/: Makefile  solve-aoc.cabal
2020/day/11/: Cargo.toml  Makefile  solve-aoc.cabal
2020/day/12/: Makefile  solve-aoc.cabal
2020/day/13/: CHANGELOG.md  solve-aoc.cabal
2020/day/14/: solve-aoc.cabal
2020/day/16/: Makefile  solve-aoc.cabal
2020/day/17/: solve-aoc.cabal
2020/day/18/: solve-aoc.cabal
2020/day/19/: scratch  solve-aoc.cabal
2020/day/20/: solve-aoc.cabal
app/: Main.hs
src/: AdventOfCode.hs
src/AdventOfCode/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Solver.hs  Spec.hs  Y2022.hs  Y2023.hs
test/: Main.hs
(+107 files in other folders)
