cabal-version:       2.4
name:                advent-of-code
version:             0.1.0.0
license:             LicenseRef-PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
extra-source-files:  CHANGELOG.md

executable day2-part1
  main-is:             2019/day/2/part1.hs
  build-depends:       base
                     , vector
                     , primitive
                     , split
  default-language:    Haskell2010

executable day2-part2
  main-is:             2019/day/2/part2.hs
  build-depends:       base
                     , vector
                     , primitive
                     , split
  default-language:    Haskell2010

executable day3-part1
  main-is:             2019/day/3/part1.hs
  build-depends:       base
                      ,HUnit
                      ,mtl
                      ,parsec
  default-language:    Haskell2010

executable day3-part2
  main-is:             2019/day/3/part2.hs
  build-depends:       base
                      ,HUnit
                      ,mtl
                      ,parsec
  default-language:    Haskell2010

executable day4-part1
  main-is:             2019/day/4/part1.hs
  build-depends:       base, doctest
                      ,HUnit
  default-language:    Haskell2010

executable day4-part2
  main-is:             2019/day/4/part2.hs
  build-depends:       base, doctest
  default-language:    Haskell2010
